feat: Part 5 - Add Docker Compose setup for local Flink cluster